# signal-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  check_install.py  debug_index.py  diagnose_indexing.py  diagnose_simple.py  mkdocs.yml  pyproject.toml  setup.py  test_indexing_issue.py
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml  security.yml  test.yml
benchmarks/: __init__.py  metrics.py  runner.py
benchmarks/indexing/: speed_test.py
config/: .env.example  dev.yaml  routing.default.yaml  security.default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: EDITIONS.md  INITIAL_mcp_rag_plan.md  REPOSITORY_SETTINGS.md  batch-processing.md  development-setup.md  index.md
docs/api-reference/: mcp-tools.md
docs/getting-started/: installation.md  quick-start.md
docs/production/: database-migration.md
examples/: batch_processing_demo.py  plugin_demo.py  routing_and_caching_demo.py  semantic_search_demo.py
examples/tutorials/01-first-indexing/: README.md
planning/: README.md  architecture-alignment-summary.md  implementation-summary.md  testing-strategy.md
planning/analysis/: architecture-sprint-alignment.md
planning/architecture/: system-design.md
planning/deprecated/: sprint-01-detailed.md  sprint-01-tickets.md
planning/deprecated/analysis/: component-coverage-matrix.md  recommended-tickets.md
planning/sprints/: overview.md  sprint-goals.md
planning/tickets/sprint-01/: README.md  SH-S01-001-repository-setup.md  SH-S01-002-python-project-structure.md  SH-S01-003-mcp-server-implementation.md  SH-S01-004-codebase-scanner.md  SH-S01-005-file-parser-framework.md  SH-S01-006-embedding-generation.md  SH-S01-007-chromadb-integration.md  SH-S01-008-development-environment.md  SH-S01-009-logging-monitoring.md  SH-S01-010-ci-cd-pipeline.md
planning/tickets/sprint-02/: README.md  SH-S02-011-metadata-extraction.md  SH-S02-012-database-abstraction.md  SH-S02-013-batch-processing.md  SH-S02-014-semantic-search.md  SH-S02-015-intelligent-chunking.md  SH-S02-016-context-assembly.md  SH-S02-017-mcp-tools.md
planning/tickets/sprint-03/: README.md  SH-S03-018-routing-engine.md  SH-S03-019-semantic-cache.md  SH-S03-020-cost-tracking.md  SH-S03-021-manual-escalation.md  SH-S03-022-cache-management.md  (+2 more)
scripts/: setup.ps1  setup.sh  validate.sh
src/signal_hub/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_batch_embedding_integration.py  test_chromadb_integration.py  test_chunking_search_integration.py  test_scanner_integration.py
tests/unit/: __init__.py  test_config.py  test_features.py  test_middleware.py  test_monitoring.py  test_server.py  test_tools.py
(+178 files in other folders)
