[tool.poetry]
name = "signal-hub"
version = "0.1.0"
description = "Intelligent developer assistant that extends Claude's context through MCP+RAG"
authors = ["Signal Hub Contributors <maintainers@signalhub.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wespiper/signal-hub"
repository = "https://github.com/wespiper/signal-hub"
keywords = ["mcp", "claude", "ai", "rag", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
# mcp = "^0.1.0"  # MCP SDK needs to be installed separately
chromadb = "^0.4.0"
openai = "^1.0.0"
# anthropic = "^0.3.0"  # Only needed for Pro features
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
pyyaml = "^6.0"
rich = "^13.0.0"
typer = "^0.9.0"
numpy = "^1.24.0"
# asyncio is built into Python 3.11+
aiofiles = "^23.0.0"
click = "^8.1.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.1"
tenacity = "^8.2.0"
tree-sitter = "^0.23.0"
tree-sitter-python = "^0.23.0"
tree-sitter-javascript = "^0.23.0"
tree-sitter-typescript = "^0.23.0"
aiohttp = "^3.9.0"  # For health check endpoint
psutil = "^5.9.0"  # For system monitoring

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src/signal_hub --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/signal_hub"]
omit = ["*/tests/*", "*/test_*"]

[tool.poetry.scripts]
signal-hub = "signal_hub.cli:app"

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B601"]  # Skip assert_used and shell_task tests